Wrap "see more" links correctly on mobile devices

--- a/src/css/global/section.scss
+++ b/src/css/global/section.scss
@@ -21,10 +21,16 @@
 }
 
 .section-header {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   margin-bottom: 24px;
+
+  @media #{$mq-sm} {
+    align-items: center;
+    flex-direction: row;
+  }
 
   .page-description {
     margin: 16px 0 0;
@@ -36,8 +42,14 @@
   }
 
   a {
+    display: inline-block;
     font-weight: bold;
+    margin-top: 8px;
     text-decoration: none;
+
+    @media #{$mq-sm} {
+      margin-top: 0;
+    }
 
     &:hover {
       text-decoration: underline;
